--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,28 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SettingActivity">
 
     <TextView
-        android:id="@+id/t1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:text="@string/setting_language"
+        android:layout_margin="20dp"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@color/black"/>
-
-    <TextView
-        android:id="@+id/t2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/setting_language_prompt"
-        android:layout_below="@+id/t1"
-        android:textSize="16sp"
-        android:layout_marginTop="10dp"
-        android:layout_alignRight="@+id/t1"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -33,8 +21,7 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="20dp"
-        android:visibility="gone">
+        android:layout_margin="20dp">
 
         <TextView
             android:id="@+id/l1"
